# vqms

./: .env.copy  .gitignore  .ruff.toml  README.md  df.md  main.py  main.txt  pyproject.toml  requirements.txt  sf_contacts_updated.csv  sf_data_loader.py  vqms-dashboard (1).html  vqms-dashboard (2).html  vqms-v3 (3).html  vqms-v3.html
Doc/: Agents.md  Application_Workflow.md  System_Architecture.md
New folder/: README.md  VQMS_ASCII_Flow_Diagrams.md  VQMS_ASCII_Flow_Diagrams_Updated.md  VQMS_Flow_Explorer.jsx  VQMS_Query_Diagrams.md  VQMS_Real_Query_Flow.md  VQM_UI.docx  index.html  main.jsx  package-lock.json  package.json  vqms-v3.html
Sample Mail/: New Text Document.txt  vqms-dashboard.html
config/: __init__.py  agents_config.yaml  database_config.yaml  dev_config.yaml  logging_config.yaml  model_config.yaml  prod_config.yaml  settings.py  test_config.yaml  tools_config.yaml
data/sample_emails/: 01_new_invoice_query.json  02_urgent_payment_escalation.json  03_reply_to_existing_ticket.json  04_contract_renewal.json
notebooks/: agent_simulation.ipynb  tool_testing.ipynb
prompts/communication_drafting/: v1.jinja
prompts/email_analysis/: v1.jinja
prompts/orchestration/: v1.jinja
scripts/: prepare_sf_import.py  run_real_pipeline.py  sf_insert_via_api.py  test_ingestion.py  test_sf_connection.py
scripts/sf_import_data/: sf_accounts.csv  sf_contacts.csv  sf_contracts.csv
security/: access_control.yaml  audit_logging_config.yaml  data_privacy_policy.md  encryption_config.yaml  gdpr_compliance_checklist.md  guardrails_config.yaml
src/: __init__.py
src/adapters/: __init__.py  bedrock.py  graph_api.py  salesforce.py  servicenow.py
src/agents/: __init__.py  abc_agent.py  communication_drafting.py  email_analysis.py  orchestration.py
src/cache/: __init__.py  redis_client.py
src/db/: __init__.py  connection.py
src/evaluation/: __init__.py  eval.py  matrix.py
src/events/: __init__.py  eventbridge.py
src/gates/: __init__.py  quality_governance.py
src/llm/: __init__.py  factory.py  security_helpers.py  (+1 more)
tasks/: lessons.md  todo.md
tests/: __init__.py  conftest.py
(+60 files in other folders)
