[project]
name = "vqms"
version = "0.1.0"
description = "VQMS (Vendor Query Management System) Agentic AI Platform - Hexaware Technologies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core frameworks
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",

    # AWS SDK
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",

    # Async runtime
    "asyncio-extras>=1.3.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",

    # Database
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",

    # Cache
    "redis[hiredis]>=5.2.0",

    # HTTP & API clients
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-asyncpg>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",

    # Templating
    "jinja2>=3.1.0",

    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",

    # Security & PII
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "eval: LLM evaluation tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
known_first_party = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
